@@ -22,7 +22,7 @@
 static  char sccsid[] = "@(#)send.c	2.32 2/28/94 (C) 1988 University of Oulu, \
 Computing Center and Jarkko Oikarinen";
 
-static char *rcs_version = "$Id: send.c,v 1.26 1999/01/21 22:38:36 db Exp $";
+static char *rcs_version = "$Id: send.c,v 1.27 1999/02/16 06:04:45 db Exp $";
 #endif
 
 #include "struct.h"
@@ -1857,6 +1857,15 @@ va_dcl
 #endif
         return;
 }
+
+void	flush_server_connections()
+  {
+    aClient *cptr;
+
+    for(cptr = serv_cptr_list; cptr; cptr = cptr->next_server_client)
+      if (DBufLength(&cptr->sendQ) > 0)
+	(void)send_queued(cptr);
+  }
 
 #ifdef SLAVE_SERVERS 
 extern aConfItem *u_conf;
